some progress on the toggle component

--- a/demo/index.jade
+++ b/demo/index.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     base(href="#{htmlWebpackPlugin.options.baseHref}")
     meta(charset="UTF-8")
-    title ng-lightning - Native Angular 2 components and directives for Lightning Design System
+    title ng2-material-ui
     link(rel="shortcut icon", href="img/favicon.ico")
     link(rel="stylesheet", type="text/css", href="assets/prismjs/prism-okaidia.css")
     link(rel="stylesheet", type="text/css", href="assets/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css")
