--- a/src/forms/toggle/toggle.component.pug
+++ b/src/forms/toggle/toggle.component.pug
@@ -1,4 +1,4 @@
-.toggle-switch([class.disabled]="disabled")
-    label.ts-label(for='{{identifier}}') {{label}}
-    input(id="{{identifier}}" type='checkbox', hidden='hidden', [attr.disabled]="disabled")
-    label.ts-helper(for='ts1')
+.toggle-switch([class.disabled]="disabled", [attr.data-ts-color]="color")
+    label.ts-label([attr.for]='identifier') {{label}}
+    input([attr.id]="identifier" type='checkbox', hidden='hidden', [attr.disabled]="disabled")
+    label.ts-helper([attr.for]='identifier')
