--- a/demo/components/demo/forms/text-area/text-area.html
+++ b/demo/components/demo/forms/text-area/text-area.html
@@ -1,6 +1,10 @@
 
 <form [formGroup]="fg" #f="ngForm">
 
+    <pre>
+        {{ f.value | json }}
+    </pre>
+
     <div class="row m-t-35">
 
         <div class="col-xs-12 col-sm-6">
