--- a/demo/components/demo/forms/email/email.html
+++ b/demo/components/demo/forms/email/email.html
@@ -1,6 +1,10 @@
 <form [formGroup]="fg" #f="ngForm">
 
-    <div class="row">
+    <pre>
+        {{ f.value | json }}
+    </pre>
+
+    <div class="row m-t-35">
         <div class="col-xs-12 col-sm-4">
             <!-- Email Control -->
             <email [fgd]="f" field="personalEmail" label="Personal Email"></email>
