--- a/demo/components/demo/forms/toggle/toggle.html
+++ b/demo/components/demo/forms/toggle/toggle.html
@@ -8,12 +8,12 @@
     <div class="row m-t-35">
         <div class="col-xs-12 col-sm-4 m-b-20">
             <!-- Standard Toggle -->
-            <toggle [fgd]="f" field="personalEmail" label="Personal Email"></toggle>
+            <toggle [fgd]="f" field="defaultToggle" label="Toggle Switch Default"></toggle>
         </div>
 
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Toggled -->
-            <toggle [fgd]="f" field="personalEmail" [disabled]="true" label="Personal Email"></toggle>
+            <toggle [fgd]="f" field="disabledToggle" [disabled]="true" label="Toggle Switch Disabled"></toggle>
         </div>
 
     </div>
