restrict height of pre.code containers to a max of 300px

--- a/demo/components/demo/forms/demo-forms.jade
+++ b/demo/components/demo/forms/demo-forms.jade
@@ -2,13 +2,13 @@ mixin code-preview(comp)
 
     tabset
         tab(heading='Markup')
-            pre.language-html
+            pre.code.language-html
                 code.language-html(ngNonBindable)!= comp.html
         tab(heading='Typescript')
-            pre.language-typescript
+            pre.code.language-typescript
                 code.language-typescript(ngNonBindable)!= comp.ts
         tab(heading='API')
-            pre.language-markdown
+            pre.code.language-markdown
                 code.language-markdown.api(ngNonBindable)
                     div!= comp.api
 
