fixed select picker css issue

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 @import './variables';
+// @import './mixins/vendor-prefixes';
 @import './app/bootstrap-overrides';
 
 @import 'bootstrap-custom';
