--- a/src/scss/vendor-overrides/bootstrap-select.scss
+++ b/src/scss/vendor-overrides/bootstrap-select.scss
@@ -1,6 +1,6 @@
 @import '../variables';
 @import '../mixins/images';
-@import '../mixins/vendor-prefixes';
+// @import '../mixins/vendor-prefixes';
 
 @import '../vendor/bootstrap-select';
 
