some progress with actions

--- a/demo/components/demo/user-interface/actions/actions.html
+++ b/demo/components/demo/user-interface/actions/actions.html
@@ -4,7 +4,7 @@
         <bw-header [block]="true">
             <h2>Some block header here</h2>
             <actions [actionItems]="actionItems"></actions>
-        <bw-header>
+        </bw-header>
     </div>
 
 </div>
