action items now fire an event when clicked, the actions demo was updated too

--- a/demo/components/demo/user-interface/actions/actions.html
+++ b/demo/components/demo/user-interface/actions/actions.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
         <bw-header [block]="true">
             <h2>Some block header here</h2>
-            <actions [actionItems]="actionItems"></actions>
+            <actions [actionItems]="actionItems" (actionClicked)="onActionClicked($event)"></actions>
         </bw-header>
     </div>
 
