done with actions component

--- a/src/user-interface/actions/actions.component.pug
+++ b/src/user-interface/actions/actions.component.pug
@@ -1,2 +1,2 @@
-ul.actions([class.actions-alt]="alt")
+ul.actions([class.actions-alt]="alt", [class.dropdown]="dropdown")
     li(*ngFor="let item of actionItems", [actionItem]="item")
