--- a/demo/components/demo/user-interface/button/button.html
+++ b/demo/components/demo/user-interface/button/button.html
@@ -6,7 +6,7 @@
 
     <!-- Normal buttons -->
     <div>
-        <bw-button *ngFor="let c of colors" [color]="c" [title]="c" class="normal"></bw-button>
+        <bw-button *ngFor="let c of colors" [color]="c" [title]="c" class="normal" (clicked)="onClicked()"></bw-button>
     </div>
 
     <div class="m-t-20">
@@ -21,21 +21,29 @@
 
     <!-- Icon buttons -->
     <div class="m-t-20">
-        <bw-button *ngFor="let c of buttons" [color]="'white'" [icon]="c.icon"></bw-button>
+        <bw-button *ngFor="let c of buttons" color="white" [icon]="c.icon"></bw-button>
     </div>
 
     <!-- Circular Icon buttons -->
     <div class="m-t-20">
-        <bw-button *ngFor="let c of buttons" [color]="'white'" [icon]="c.icon" [circular]="true"></bw-button>
+        <bw-button *ngFor="let c of buttons" color="white" [icon]="c.icon" [circular]="true"></bw-button>
     </div>
 
     <br/>
 
-    <p class="lead">
+    <p class="lead m-t-20">
         Circular Icon Buttons
     </p>
 
     <!-- Normal buttons -->
     <bw-button *ngFor="let c of buttons" [color]="c.color" [icon]="c.icon" [circular]="true"></bw-button>
+
+    <p class="lead">
+        Block Buttons
+    </p>
+
+    <!-- Normal buttons -->
+    <bw-button color="white" title="White Block Button" [block]="true"></bw-button>
+    <bw-button color="blue" title="Blue Block Button" [block]="true"></bw-button>
 
 </div>
