--- a/src/user-interface/button-group/button-group.component.pug
+++ b/src/user-interface/button-group/button-group.component.pug
@@ -1,4 +1,4 @@
-.btn-group
+.btn-group(class="btn-group-{{size}}")
     button.btn.waves-effect(
         *ngFor="let o of options"
         type='button',
