--- a/demo/components/demo/user-interface/pre-loader/pre-loader.html
+++ b/demo/components/demo/user-interface/pre-loader/pre-loader.html
@@ -1,8 +1,7 @@
 <div class="row">
 
     <div class="col-xs-12">
-        <div bwPreloader="xxl"></div>        
+        <bw-preloader *ngFor="let c of colors" [color]="c"></bw-preloader>
     </div>
-
 
 </div>
