--- a/demo/components/demo/user-interface/actions/actions.html
+++ b/demo/components/demo/user-interface/actions/actions.html
@@ -10,7 +10,9 @@
     <div class="col-xs-12">
         <bw-header [block]="true">
             <h2>Some block header here</h2>
-            <actions [actionItems]="actionItems" [showBig]="true" (actionClicked)="onActionClicked($event)"></actions>
+            <actions class="pull-right" 
+                [actionItems]="actionItems" [showBig]="true" (actionClicked)="onActionClicked($event)">
+            </actions>
         </bw-header>
     </div>
 
