update actions components to support big size, also added support for all material colors, added actions support to the app header component

--- a/demo/app.jade
+++ b/demo/app.jade
@@ -1,4 +1,8 @@
-app-header(color="blue", [addMenuTrigger]="true", brand="Material Components - Demo", (onSidebarToggle)="open = $event")
+app-header(color="blue",
+    [addMenuTrigger]="true",
+    brand="Material Components - Demo",
+    (onSidebarToggle)="open = $event",
+    [actions]="headerActions")
 
 sidebar([open]="open")
     img.w-100(src="./img/angular-logo2.png")
