--- a/demo/components/demo/user-interface/actions/actions.html
+++ b/demo/components/demo/user-interface/actions/actions.html
@@ -10,8 +10,8 @@
     <div class="col-xs-12">
         <bw-header [block]="true">
             <h2>Some block header here</h2>
-            <actions class="pull-right" 
-                [actionItems]="actionItems" [showBig]="true" (actionClicked)="onActionClicked($event)">
+            <actions class="pull-right" color="pink"
+                [actionItems]="actionItems" [showBig]="true" [color]="'green'" (actionClicked)="onActionClicked($event)">
             </actions>
         </bw-header>
     </div>
