--- a/src/scss/app/listview.scss
+++ b/src/scss/app/listview.scss
@@ -181,7 +181,7 @@
     font-size: 17px;
     width: 18px;
     height: 18px;
-    background-color: #ADADAD;
+    background-color: $m-light-gray;
     line-height: 100%;
     color: #fff;
     text-align: center;
