--- a/src/scss/app/vendor-overrides/fullcalendar.scss
+++ b/src/scss/app/vendor-overrides/fullcalendar.scss
@@ -49,7 +49,7 @@
 
     .fc-day-number {
         text-align: center;
-        color: #ADADAD;
+        color: $m-light-gray;
         padding: 5px 0;
     }
 
@@ -95,7 +95,7 @@
     }
 
     .fc-day-header {
-        color: #ADADAD;
+        color: $m-light-gray;
         text-align: left;
         font-size: 14px;
         border-bottom-width: 0;
