--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -29,10 +29,15 @@ $m-amber:                  #FFC107;
 $m-orange:                 #FF9800;
 $m-deeporange:             #FF5722;
 $m-gray:                   #9E9E9E;
+$m-light-gray:             #ADADAD;
 $m-bluegray:               #607D8B;
 $m-indigo:                 #3F51B5;
 $m-pink:                   #E91E63;
 $m-brown:                  #795548;
+
+
+$colors-array: c-white bgm-white $m-white, c-black bgm-black $m-black, c-brown bgm-brown $m-brown, c-pink bgm-pink $m-pink, c-red bgm-red $m-red, c-blue bgm-blue $m-blue, c-purple bgm-purple $m-purple, c-deeppurple bgm-deeppurple $m-deeppurple, c-lightblue bgm-lightblue $m-lightblue, c-cyan bgm-cyan $m-cyan, c-teal bgm-teal $m-teal, c-green bgm-green $m-green, c-lightgreen bgm-lightgreen $m-lightgreen, c-lime bgm-lime $m-lime, c-yellow bgm-yellow $m-yellow, c-amber bgm-amber $m-amber, c-orange bgm-orange $m-orange, c-deeporange bgm-deeporange $m-deeporange, c-gray bgm-gray $m-gray, c-bluegray bgm-bluegray $m-bluegray, c-indigo bgm-indigo $m-indigo, c-light-gray gbm-light-gray $m-light-gray;
+
 
 /* Bootstrap Branding */
 $brand-primary:             $m-blue;
