added a VERY SIMPLE version of the data range that it is not even completed

--- a/demo/index.jade
+++ b/demo/index.jade
@@ -9,6 +9,7 @@ html(lang="en")
     link(rel="stylesheet", type="text/css", href="assets/prismjs/prism-okaidia.css")
     link(rel="stylesheet", type="text/css", href="assets/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/css/bootstrap-select.min.css")
+    link(rel="stylesheet", type="text/css", href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css")
 
     //- Intl pollyfill for Safari
     script(type="application/javascript", src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en")
@@ -19,6 +20,7 @@ html(lang="en")
     script(type="application/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/js/bootstrap-select.js")
     script(type="application/javascript", src="assets/moment/moment.min.js")
     script(type="application/javascript", src="assets/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js")
+    script(type="text/javascript", src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js")
 
 
   body
