updated the style for the data range

--- a/src/scss/vendor-overrides/index.scss
+++ b/src/scss/vendor-overrides/index.scss
@@ -1,3 +1,4 @@
 @import './bootstrap-select';
 @import './bootstrap-datetimepicker';
 @import './bootstrap-datetimepicker-extra';
+@import './date-range-picker';
