updated the style of the begin and end controls

--- a/demo/components/demo/forms/date-range-picker/date-range-picker.html
+++ b/demo/components/demo/forms/date-range-picker/date-range-picker.html
@@ -9,8 +9,7 @@
             <!-- Standard Date Time Picker -->
             <date-range-picker
                 [fgd]="f"
-                field="dateRange1"
-                placeholder="Birthday">
+                field="dateRange1">               
             </date-range-picker>
         </div>
 
