--- a/demo/index.jade
+++ b/demo/index.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     base(href="#{htmlWebpackPlugin.options.baseHref}")
     meta(charset="UTF-8")
-    title ng2-material-ui
+    title ng2-material-components
     link(rel="stylesheet", type="text/css", href="assets/demo.css")
     link(rel="shortcut icon", href="img/favicon.ico")
     link(rel="stylesheet", type="text/css", href="assets/prismjs/prism-okaidia.css")
@@ -16,7 +16,6 @@ html(lang="en")
     script(type="application/javascript", src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
     script(type="application/javascript", src="assets/moment/moment.min.js")
-    script(type="application/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/js/bootstrap-select.js")
     
   body
     app
