I still need to fix the multi seection onthe locale

--- a/demo/components/demo/forms/date-range-picker/date-range-picker.html
+++ b/demo/components/demo/forms/date-range-picker/date-range-picker.html
@@ -9,7 +9,8 @@
             <!-- Standard Date Time Picker -->
             <date-range-picker
                 [fgd]="f"
-                field="dateRange1">               
+                field="dateRange1"
+                (rangeChanged)="rangeChanged($event)">
             </date-range-picker>
         </div>
 
