fixed issue with multiple selection on the select picker

--- a/src/forms/select-picker/select-picker.component.pug
+++ b/src/forms/select-picker/select-picker.component.pug
@@ -1,5 +1,5 @@
 select.my-selectpicker(
     style="display: none;",
-    [attr.multiple]="allowMultiSelection ? true : null",
+    [attr.multiple]="multiple ? true : null",
     [formControl]="control")
     option(*ngFor="let item of items", value="{{item.id}}") {{item.title}}
