added disabled attribute to the select-picker

--- a/src/forms/select-picker/select-picker.component.pug
+++ b/src/forms/select-picker/select-picker.component.pug
@@ -1,5 +1,6 @@
 select.my-selectpicker(
     style="display: none;",
+    [attr.disabled]="disabled",
     [attr.multiple]="multiple ? true : null",
     [formControl]="control")
     option(*ngFor="let item of items", value="{{item.id}}") {{item.title}}
