updated red color

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,7 +15,7 @@ $container-desktop:                     100%;
 $m-white:                  #ffffff;
 $m-black:                  #000000;
 $m-blue:                   #2196F3;
-$m-red:                    #F44336;
+$m-red:                    #E41736;
 $m-purple:                 #9C27B0;
 $m-deeppurple:             #673AB7;
 $m-lightblue:              #03A9F4;
